# VaultAgent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
dashboard/: .env.example  Dockerfile  middleware.ts  package.json  tailwind.config.ts
dashboard/src/: instrumentation.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/stripe/checkout/: route.ts
dashboard/src/app/api/stripe/portal/: route.ts
dashboard/src/app/api/stripe/webhook/: route.ts
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/dashboard/agents/: page.tsx
dashboard/src/app/dashboard/approvals/: page.tsx
dashboard/src/app/dashboard/billing/: page.tsx
dashboard/src/app/dashboard/logs/: page.tsx
dashboard/src/app/dashboard/policies/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: ApprovalCard.tsx  AuditLogTable.tsx  LiveFeed.tsx  PolicyEditor.tsx  Sidebar.tsx  StatsCard.tsx
dashboard/src/lib/: auth.ts  demo-data.ts  store.ts  stripe.ts  supabase.ts  types.ts
docs/: dashboard-guide.md  getting-started.md  policy-reference.md  sdk-reference.md
docs/integrations/: anthropic.md  langchain.md  mcp.md  openai.md  openclaw.md
examples/openclaw/: docker-compose.yml  openclaw.json  vaultagent.policy.yaml
mcp-server/: package.json
mcp-server/src/: audit.ts  index.ts  policy.ts  proxy.ts
openclaw-plugin/: README.md  package.json
openclaw-plugin/src/: hooks.ts  index.ts
sdk/: README.md  pyproject.toml
sdk/policies/: restrictive.yaml
sdk/src/vaultagent/: __init__.py  cli.py
sdk/src/vaultagent/cloud/: __init__.py  client.py
sdk/src/vaultagent/core/: __init__.py  audit.py  decision.py  policy.py  rate_limit.py  vault.py
sdk/src/vaultagent/mcp/: __init__.py
sdk/src/vaultagent/middleware/: __init__.py  anthropic.py  langchain.py  openai.py
sdk/tests/: test_decision.py  test_policy.py  test_vault.py
skills/vaultagent/: SKILL.md
supabase/: schema.sql
(+3 files in other folders)
